--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -55,17 +55,19 @@
         </nav>
     </header>
 
-    <main id="mainContent"></main>
+
+
+    <main tabindex="0" id="mainContent"></main>
     <footer tabindex="0">
         <p>Copyright © 2022. Rumah Batik Nusantara All right reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
