--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,8 +9,8 @@
     <meta name="theme-color" content="#373c54" />
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="favicon.png" />
     <title>Rumah Batik Nusantara</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
