Change product image height

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,11 +93,9 @@ header {
   height: 80vh;
   width: 100%;
   text-align: center;
-  background-image: linear-gradient(
-      90deg,
+  background-image: linear-gradient(90deg,
       rgba(18, 18, 18, 0.35),
-      rgba(18, 18, 18, 0.35)
-    ),
+      rgba(18, 18, 18, 0.35)),
     url('../public/image/img1.jpg');
   background-size: cover;
   background-position: center;
@@ -185,7 +183,7 @@ header {
 
 .product-image {
   width: 100%;
-  height: 320px;
+  height: auto;
 }
 
 .title_product {
