--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -51,9 +51,6 @@ header {
 }
 
 .logo {
-  /* background-image: url('../public/image/logo.png'); */
-  /* background-color: #D2AB67;
-    width: 50%; */
   height: 45px;
 }
 
@@ -88,8 +85,6 @@ header {
 
 /* Hero */
 .hero_container {
-  display: flex;
-  align-items: center;
   height: 80vh;
   width: 100%;
   text-align: center;
@@ -102,14 +97,16 @@ header {
 }
 
 .hero-title {
-  position: relative;
-  left: 50%;
   color: #fff;
-  transform: translate(-50%, -50%);
   text-transform: capitalize;
   font-weight: 400;
   letter-spacing: 2px;
-  font-size: 50px;
+  padding-bottom: 16px;
+}
+
+.hero_content {
+  position: relative;
+  top: 45%;
 }
 
 /*explore_content */
@@ -132,11 +129,6 @@ header {
 .g {
   position: relative;
   width: 100%;
-}
-
-.list-item-image {
-  width: 100%;
-  height: 430px;
 }
 
 .title_service {
