--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -24,7 +24,15 @@
 
     .hero-title {
         font-size: 35px;
-        padding: 0 24px 0 24px;
+        padding: 0 24px 14px 24px;
+    }
+
+    .hero_content a {
+        background-color: var(--hover);
+        color: var(--bg-color);
+        font-size: 16px;
+        text-decoration: none;
+        padding: 8px 18px;
     }
 
     /* service */
@@ -66,6 +74,7 @@
 
     .list-item-image {
         height: 55vh;
+        width: 100%;
     }
 
     .our_collection h3 {
@@ -138,6 +147,14 @@
         font-size: 38px;
     }
 
+    .hero_content a {
+        background-color: var(--hover);
+        color: var(--bg-color);
+        font-size: 16px;
+        text-decoration: none;
+        padding: 8px 20px;
+    }
+
     .explore_content h2 {
         font-size: 28px;
         padding-bottom: 14px;
@@ -200,6 +217,20 @@
         margin-right: 30px;
         font-size: 20px;
     }
+
+    .hero_content a {
+        background-color: var(--hover);
+        color: var(--bg-color);
+        font-size: 20px;
+        text-decoration: none;
+        padding: 10px 24px;
+    }
+
+    .list-item-image {
+        height: 70vh;
+        width: 100%;
+    }
+
 
     .container-fluid img {
         padding-left: 50px;
